<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person"
            tools:ignore="VectorDrawableCompat" />
        <EditText
            android:id="@+id/login_label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:fontFamily="@font/asset"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:text="Login"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="34dp"
            android:background="@drawable/edittextstyle"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="@+id/login_label"
            app:layout_constraintStart_toStartOf="@+id/login_label"
            app:layout_constraintTop_toBottomOf="@+id/login_label" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/edittextstyle"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingLeft="20dp"
            app:layout_constraintEnd_toEndOf="@+id/userName"
            app:layout_constraintStart_toStartOf="@+id/userName"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/buttonstyles"
            android:text="@string/log_button"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/back_to_register"
            android:textColor="#fff"
            android:textSize="17sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/login_button"
            app:layout_constraintStart_toStartOf="@+id/login_button"
            app:layout_constraintTop_toBottomOf="@+id/login_button" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>