<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    tools:context=".Dashboard">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/signup_label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:fontFamily="@font/asset"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:selectAllOnFocus="false"
            android:singleLine="false"
            android:text="SignUp"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:layout_constraintStart_toStartOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />



        <EditText
            android:id="@+id/tv_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:ems="10"
            android:background="@drawable/edittextstyle"
            android:hint="@string/email"
            android:paddingLeft="10dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/signup_label"
            app:layout_constraintStart_toStartOf="@+id/signup_label"
            app:layout_constraintTop_toBottomOf="@+id/signup_label" />

        <EditText
            android:id="@+id/tv_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/edittextstyle"
            android:ems="10"
            android:hint="@string/password"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/tv_email"
            app:layout_constraintStart_toStartOf="@+id/tv_email"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <Button
            android:id="@+id/btn_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="64dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:background="@drawable/buttonstyles"
            android:text="@string/reg_button"
            android:textColor="#fff"
            app:layout_constraintEnd_toEndOf="@+id/tv_password"
            app:layout_constraintStart_toStartOf="@+id/tv_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <TextView
            android:id="@+id/btnAlert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="24dp"
            android:text="@string/already"
            android:textColor="#fff"
            android:textSize="17sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/btn_register"
            app:layout_constraintStart_toStartOf="@+id/btn_register"
            app:layout_constraintTop_toBottomOf="@+id/btn_register" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_person"
            tools:ignore="VectorDrawableCompat" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</LinearLayout>