<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg_gradient"
    tools:context=".BaseActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">


        <ImageView
            android:id="@+id/menu_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_menu_black_24dp" />

        <ImageView
            android:id="@+id/login_icon"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:background="@color/colorPrimaryDark"
            android:padding="5dp"
            android:src="@drawable/ic_person"
            android:layout_alignParentEnd="true" />

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/crimson_text_bold_italic"
            android:text="@string/cartegories"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:alignmentMode="alignMargins"
                android:columnCount="1"
                android:columnOrderPreserved="false"
                android:rowCount="4">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="vertical"
                        >

                        <ImageView
                            android:id="@+id/img_report"
                            android:layout_width="200dp"
                            android:layout_height="190dp"
                            android:layout_row="0"
                            android:layout_column="1"
                            android:layout_marginTop="15dp"
                            android:src="@drawable/zero_hunger1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:fontFamily="@font/crimson_text_bold_italic"
                            android:text="@string/description"
                            android:textColor="@color/colorAccent"
                            android:textSize="40sp" />

                    </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical"
                    >

                    <ImageView
                        android:id="@+id/img_company"
                        android:layout_width="200dp"
                        android:layout_height="190dp"
                        android:layout_row="0"
                        android:layout_column="1"
                        android:layout_marginTop="15dp"
                        android:src="@drawable/zero_hunger1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/crimson_text_bold_italic"
                        android:text="@string/share_ideas"
                        android:textColor="@color/colorAccent"
                        android:textSize="40sp" />

                </LinearLayout>



            </GridLayout>

        </LinearLayout>

    </ScrollView>



</LinearLayout>